--- a/src/assets/scss/typography/_typography.scss
+++ b/src/assets/scss/typography/_typography.scss
@@ -36,6 +36,11 @@ h6 {
     font-size: 1.125rem;
     padding: 0 0 1rem;
 }
+.sub-title {
+    display: block;
+    font-size: 1rem;
+    padding: 0 0 0.5rem;
+}
 
 //text
 p {
