--- a/src/assets/scss/modules/_general.scss
+++ b/src/assets/scss/modules/_general.scss
@@ -3,7 +3,7 @@ body, html {
 	font:16px/24px Arial, Helvetica, sans-serif;
 	height:100%;
 	background:#fff;
-	color: #000;
+	color: #0D0E45;
 	min-width: 1180px;
 }
 select, input, textarea {
@@ -40,7 +40,6 @@ p {
   body,html {
 		min-width: 768px;
 	}
-
 }
 
 @media screen and (max-width: $mobile) {
