--- a/src/assets/scss/modules/_header.scss
+++ b/src/assets/scss/modules/_header.scss
@@ -1,3 +1,11 @@
 header {
-  
+    margin: 0 -5px 20px;
+    padding: 20px 0;
+    text-align: center;
+    background: #0D0E45;
+    color: #fff;
+
+  h1 {
+    margin: 0;
+  }
 }
