--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -2,6 +2,7 @@
 
 <div class="page">
   {% include "partials/_header.html" %}
+  <h2>Grid example:</h2>
   <div class="container">
     <div class="row">
       <div class="col-1">
@@ -10,11 +11,11 @@
       <div class="col-2 col-6-m">
         2 but 6 in mobile
       </div>
-      <div class="col-3 col-6-m">
-        3 but 6 in mobile
+      <div class="col-4 col-6-m">
+        4 but 6 in mobile
       </div>
-      <div class="col-6">
-        6
+      <div class="col-5">
+        5
       </div>
     </div><!-- / row -->
     <div class="row">
@@ -69,6 +70,7 @@
       </div>
     </div><!-- / row -->
   </div><!-- / container -->
+  <h2>Typo:</h2>
   <div class="box">
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
