--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -13,6 +13,9 @@
 //grid
 @import "grid/grid";
 
+//buttons
+@import "buttons/buttons";
+
 //page styles
 @import "modules/general";
 @import "modules/header";
