--- a/src/assets/scss/main/_vars.scss
+++ b/src/assets/scss/main/_vars.scss
@@ -1,12 +1,16 @@
 //colors
-
-//btn-colors
-
-//social-colors
+$color-black:#000;
+$color-grey:#363636;
+$color-grey-btn:#d7d7d7;
+$color-white:#fff;
+$color-blue:#04c4d7;
+$color-teal:#26d6cd;
+$color-red:#fc3268;
+$color-orange:#df7514;
+$color-purple:#8e6ef9;
 
 
 //responsive
 $tablet: 1048px;
 $mobile: 767px;
 
-//fonts
