--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -80,7 +80,38 @@
     <h6>Heading 6</h6>
     <strong class="title">Content Title</strong>
     <strong class="sub-title">Sub title</strong>
-  </div>
+  </div><!-- / box -->
+  <h2>Buttons:</h2>
+  <div class="container">
+    <div class="btn-example">
+      <a href="#" class="g-btn">Simple button</a>
+      <a href="#" class="g-btn empty">Simple empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn danger">Danger button</a>
+      <a href="#" class="g-btn danger empty">Danger empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn warning">Warning button</a>
+      <a href="#" class="g-btn warning empty">Warning empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn accept">Accept button</a>
+      <a href="#" class="g-btn accept empty">Accept empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn info">Info button</a>
+      <a href="#" class="g-btn info empty">Info empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn secondary">Secondary button</a>
+      <a href="#" class="g-btn secondary empty">Secondary empty button</a>
+    </div>
+    <div class="btn-example">
+      <a href="#" class="g-btn disabled">Disabled button</a>
+      <a href="#" class="g-btn disabled empty">Disabled empty button</a>
+    </div>
+  </div><!-- / box -->
   {% include "partials/_footer.html" %}
 </div><!-- / page -->
 </body>
