--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -112,6 +112,10 @@
       <a href="#" class="g-btn disabled empty">Disabled empty button</a>
     </div>
   </div><!-- / box -->
+  <h2>Forms:</h2>
+  <h4>TBD</h4>
+  <h2>Tables:</h2>
+  <h4>TBD</h4>
   {% include "partials/_footer.html" %}
 </div><!-- / page -->
 </body>
